added lines to set up the BLAT bin location and to set the host/port for BLAT search.

--- a/conf/Blast.conf
+++ b/conf/Blast.conf
@@ -7,7 +7,7 @@ tmpDir = /tmp/
 
 ### To set the directory for storing the tmp png file.  
 ### It should be made to world writable.
-imageDir = /share/yeast/www-data/html/tmp/
+imageDir = /share/dough/www-data_sgd/html/tmp/
 
 ### To set the root url for the image file location. Its physical 
 ### location is imageDir.
@@ -25,10 +25,26 @@ database = nt => dna => nt - DNA database
 
 ### To set the bin directory for storing the BLAST executable files
 ### (i.e, blastn, blastp, etc).
-blastBinDir = /share/yeast/www-data/cgi-bin/GMOD/blast/
+blastBinDir = /tools/wu-blast/current/
 
-### To set the BLAST executable files, the types, and the descriptions 
-program = blastn => dna => BLASTN - nucletide query to nucletide db
+### To set the bin directory for storing the BLAT executable files
+### (i.e., blat, tblatn). 
+### uncomment out the following 'blatBinDir' line if you have installed the BLAT programs
+# blatBinDir = /tools/blat/bin/
+
+### To set the port and host for each combination of datasets and 
+### blat programs. The host is the name of the machine running the gfServer.
+### The port is the same as you started the gfServer with.
+### Uncomment out the following 'port' lines if you have set up the BLAT programs. 
+# port = 17778 => dough.stanford.edu => blat => nt 
+# port = 17779 => dough.stanford.edu => tblatn => nt
+
+### To set the BLAST and BLAT executable files, the types, and 
+### the descriptions. Uncomment out the following 'blat' and 'tblatn' lines if you have
+### set up the BLAT programs. 
+# program = blat => dna => BLAT - fast nucleotide query to nucleotide db
+# program = tblatn => dna => TBLATN - fast protein query to translated (6) nucleotide db
+program = blastn => dna => BLASTN - nucleotide query to nucleotide db
 program = blastp => protein => BLASTP - protein query to protein db
 program = blastx => protein => BLASTX - translated (6 frames) nucl. query to protein db
 program = tblastx => dna => TBLASTX - transl. (6 frames) nucl. query to transl (6) nt db
@@ -36,7 +52,7 @@ program = tblastn => dna => TBLASTN - protein query to translated (6 frames) nt 
 
 
 ### To set the directory for storing the BLAST matrix files.
-blastMAT = /usr2/share/www-data/cgi-bin/blast/matrix/
+blastMAT = /tools/wu-blast/current/matrix/
 
 
 ### To set the matrix you want to include in the search page 
@@ -48,7 +64,7 @@ matrix = PAM250
 
 
 ### To set the directory for storing the BLAST filter files.
-blastFILTER = /usr2/share/www-data/cgi-bin/blast/filter/
+blastFILTER = /tools/wu-blast/current/filter/
 
 
 
