add me as 3rd author

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,7 @@
 name    = Bio-GMOD-Blast-Graph
 author  = Shuai Weng <shuai@genome.stanford.edu>
 author  = John Slenk <jces@genome.stanford.edu>
+author  = Robert Buels <rmb32@cornell.edu>
 
 abstract = display a graphical summary of a BLAST report
 license = Perl_5
