copyright holder is actually stanford, apparently

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ author  = Robert Buels <rmb32@cornell.edu>
 
 abstract = display a graphical summary of a BLAST report
 license = Perl_5
-copyright_holder = Shuai Weng
+copyright_holder = The Board of Trustees of Leland Stanford Junior University
 copyright_year   = 2003
 
 version = 0.01
