move DISCLAIMER file to the more standard name LICENSE

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,6 @@ author  = John Slenk <jces@genome.stanford.edu>
 author  = Robert Buels <rmb32@cornell.edu>
 
 abstract = display a graphical summary of a BLAST report
-license = Perl_5
 copyright_holder = The Board of Trustees of Leland Stanford Junior University
 copyright_year   = 2003
 
@@ -12,6 +11,9 @@ version = 0.01
 
 [@Filter]
 -bundle = @RBUELS
+-remove = License
+
+
 
 dist = Bio-GMOD-Blast-Graph
 repository = http://github.com/gmod/Bio-GMOD-Blast-Graph
