--- a/dist.ini
+++ b/dist.ini
@@ -2,6 +2,8 @@ name    = Bio-GMOD-Blast-Graph
 author  = Shuai Weng <shuai@genome.stanford.edu>
 author  = John Slenk <jces@genome.stanford.edu>
 author  = Robert Buels <rmb32@cornell.edu>
+author  = Jonathan "Duke" Leto <jonathan@leto.net>
+license = Artistic_1_0
 
 abstract = display a graphical summary of a BLAST report
 copyright_holder = The Board of Trustees of Leland Stanford Junior University
